force-app/main/default/objects/Account_Plan__c/fields/Account_Sales_Growth__c.field-meta.xml
<CustomField>
    <fullName>Account_Sales_Growth__c</fullName>
    <formula>IF (  Last_FY_Account_Sales__c = 0 , 1,   (  Plan_FY_Account_Sales_Goal__c  - Last_FY_Account_Sales__c  ) /  Last_FY_Account_Sales__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Sales Growth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>