force-app/main/default/objects/Account_Plan__c/fields/Key_Client_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Key_Client_Sponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Key Client Sponsor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>R00N60000001PRPAEA4</relationshipName>
    <type>Lookup</type>
</CustomField>