force-app/main/default/objects/Account_Plan__c/fields/Last_Plan_Revision__c.field-meta.xml
<CustomField>
    <fullName>Last_Plan_Revision__c</fullName>
    <label>Last Plan Revision</label>
    <type>Date</type>
</CustomField>