force-app/main/default/objects/Account_Plan__c/fields/Planning_Year__c.field-meta.xml
<CustomField>
    <fullName>Planning_Year__c</fullName>
    <label>Planning Year</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FY2017</fullName>
            </value>
            <value>
                <fullName>FY2018</fullName>
            </value>
            <value>
                <fullName>FY2019</fullName>
            </value>
            <value>
                <fullName>FY2020</fullName>
            </value>
            <value>
                <fullName>FY2021</fullName>
            </value>
            <value>
                <fullName>FY2022</fullName>
            </value>
            <value>
                <fullName>FY2023</fullName>
            </value>
            <value>
                <fullName>FY2024</fullName>
            </value>
            <value>
                <fullName>FY2025</fullName>
            </value>
            <value>
                <fullName>FY2026</fullName>
            </value>
            <value>
                <fullName>FY2027</fullName>
            </value>
            <value>
                <fullName>FY2028</fullName>
            </value>
            <value>
                <fullName>FY2029</fullName>
            </value>
            <value>
                <fullName>FY2030</fullName>
            </value>
            <value>
                <fullName>FY2031</fullName>
            </value>
            <value>
                <fullName>FY2032</fullName>
            </value>
            <value>
                <fullName>FY2033</fullName>
            </value>
            <value>
                <fullName>FY2034</fullName>
            </value>
            <value>
                <fullName>FY2035</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>