force-app/main/default/objects/Account_Plan__c/fields/Potential_Barriers__c.field-meta.xml
<CustomField>
    <fullName>Potential_Barriers__c</fullName>
    <label>Potential Barriers</label>
    <length>15000</length>
    <type>Html</type>
</CustomField>